# jptime

./: CHANGELOG.md  LICENSE  README.md  jptime.py  pyproject.toml  test_jptime.py
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml  publish_pypi.yml  py_package.yml
jptime/: __init__.py
