[tool.poetry]
name = "jptime"
version = "0.1.0"
description = ""
authors = ["kitagawa-hr <kitagawa@cancerscan.jp>"]

[tool.poetry.dependencies]
python = "^3.7"
japanese-numbers-python = "^0.2.0"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
mypy = "^0.761"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
